# yolo

./: CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml
src/typinator/: __init__.py  _abstract_meta_class.py  _meta_meta_class.py  _typinator.py
src/utilities/: __init__.py  _abstract_field.py  _abstract_file_io.py  _create_dir.py  _maybe.py  _maybe_type.py  _maybe_types.py  _mono_space.py  _time_stamp.py  _type_guard.py
src/yolo/: __init__.py  _yolo.py
