[METADATA]
name = yolo
version = 0.0.1
author = Asger Jon Vistisen
author_email = asgerjon2@gmail.com
description = Streamlined Python Testing and Execution
long_description = file:README.md,LICENSE
long_description_content_type = text/markdown
url =
project_urls =
classifiers =
    Programming Language::Python::3
    LICENSE::
    Operating System::OS Independent
keywords =
    Python
    Testing
    Automation
    Development
    Code Execution
    Logging
    Customization
    Streamlining
    Development Tools
    Asger Jon Vistisen
[OPTIONS]
package_dir =
    =src
packages = find:
python_requires = >=3.8
[options.packages.find]
where = src
